<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guest">Todos</string>
    <string name="menu_present">Presentes</string>
    <string name="menu_absents">Ausentes</string>
    <string name="label_name">Nome:</string>
    <string name="label_confirmation">Confirmação</string>
    <string name="label_save">Salvar</string>
    <string name="remocao_convidado">Remoção de item</string>
    <string name="deseja_remover">Deseja remover ease convidado?</string>
    <string name="sim">Sim</string>
    <string name="nao">Cancelar</string>
</resources>