<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all">

    <fragment
        android:id="@+id/nav_all"
        android:name="me.san.convidados.view.AllGuestFragment"
        android:label="@string/menu_all_guest"
        tools:layout="@layout/fragment_all" />

    <fragment
        android:id="@+id/nav_presents"
        android:name="me.san.convidados.view.PresentFragment"
        android:label="@string/menu_present"
        tools:layout="@layout/fragment_present" />

    <fragment
        android:id="@+id/nav_absents"
        android:name="me.san.convidados.view.AbsentFragment"
        android:label="@string/menu_absents"
        tools:layout="@layout/fragment_absents" />
</navigation>